Error when trying to load any of betsoft.com games
Categories
(Core :: Audio/Video: Playback, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox118 | --- | verified |
| firefox119 | --- | verified |
| firefox120 | --- | verified |
People
(Reporter: bugzilla, Assigned: padenot)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
dmeehan
:
approval-mozilla-beta+
pascalc
:
approval-mozilla-release+
|
Details | Review |
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:109.0) Gecko/20100101 Firefox/118.0
Steps to reproduce:
go to
https://betsoft.com/
choose from top menu
our games
pick a category (eg table games)
choose a game (Baccarat)
Select to Play Demo
Actual results:
error of
A network error error has occured. Please try again and contact support if the error persists
Expected results:
Game should play
Have run:
mozregression
it claims to have narrowed the issue down to:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=d1fbe6c1f87656fb4f55677904f55f6df433ea9a&tochange=062a5e5729067f579bd6d1ab2f1a3021d7fd291a
Comment 2•2 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Audio/Video: Playback' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
Comment 3•2 years ago
|
||
ni :padenot based on the regression range.
| Assignee | ||
Comment 4•2 years ago
|
||
Some files (two in the example I've tried) on this website are invalid, and have a granulepos of 4294966502 for the last packet. At 44100Hz that is about 1.2 days. The file is only a few hundreds milliseconds long. This breaks the trimming logic, that trims the entire file. Empty files are reported as errors by decodeAudioData.
| Assignee | ||
Comment 5•2 years ago
|
||
Updated•2 years ago
|
Comment 7•2 years ago
|
||
Based on comment #1, this bug contains a bisection range found by mozregression. However, the Regressed by field is still not filled.
:padenot, if possible, could you fill the Regressed by field and investigate this regression?
For more information, please visit BugBot documentation.
Comment 8•2 years ago
|
||
This bug has been marked as a regression. Setting status flag for Nightly to affected.
Comment 9•2 years ago
|
||
Set release status flags based on info from the regressing bug 1839391
Comment 10•2 years ago
|
||
| bugherder | ||
| Assignee | ||
Comment 11•2 years ago
|
||
Comment on attachment 9356170 [details]
Bug 1856145 - Protect against incorrect granulepos in OGG bytestream. r?alwu
Beta/Release Uplift Approval Request
- User impact if declined: Content breakage -- gaming website doesn't work anymore
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: STR in https://bugzilla.mozilla.org/show_bug.cgi?id=1856145#c0
- List of other uplifts needed: None
- Risk to taking this patch: Medium
- Why is the change risky/not risky? (and alternatives if risky): This is special casing this case and reverts to previous behaviour.
- String changes made/needed:
- Is Android affected?: Yes
| Assignee | ||
Updated•2 years ago
|
Comment 12•2 years ago
|
||
Comment on attachment 9356170 [details]
Bug 1856145 - Protect against incorrect granulepos in OGG bytestream. r?alwu
Approved for 119.0b6
Comment 13•2 years ago
|
||
| uplift | ||
Updated•2 years ago
|
Updated•2 years ago
|
Comment 14•2 years ago
|
||
Reproduced the issue on Firefox 118, on Ubuntu 22.
Verified as fixed on the latest Nightly 120.0a1 (20231005212657) and Firefox 119.0b6 (treeherder build - 20231004190537) on Ubuntu 22.04 and Ubuntu 20.04.
Comment 15•2 years ago
|
||
Comment on attachment 9356170 [details]
Bug 1856145 - Protect against incorrect granulepos in OGG bytestream. r?alwu
Approved for our next 118 dot release, thanks.
Comment 16•2 years ago
|
||
| uplift | ||
Comment 17•2 years ago
|
||
| bugherder uplift | ||
Updated•2 years ago
|
Comment 18•2 years ago
|
||
Verified as fixed on Firefox 118.0.2 (20231009140911) on Ubuntu 22.04 and Ubuntu 20.04.
Description
•