Bug 1856145 - Protect against incorrect granulepos in OGG bytestream. r=alwu

Differential Revision: https://phabricator.services.mozilla.com/D189820